--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.eclipse.jdt:org.eclipse.jdt.core:3.30.0'
+
     implementation 'com.google.code.gson:gson:2.9.0'
 
     implementation 'org.ow2.asm:asm:9.3'
